# smapi

./: .travis.yml  CMakeLists.txt  meson.build
subprojects/: huskylib.wrap
